--- a/app/views/shared/layout/_head.html.haml
+++ b/app/views/shared/layout/_head.html.haml
@@ -1,15 +1,5 @@
 %title
-  &= page_title
-= render "shared/layout/css"
-
+  "Friend Pro"
 = javascript_include_tag "modernizr.js"
-
-= raw(current_group.head_tag)
-= render "shared/layout/meta"
-
--if @feed_urls && !@feed_urls.empty?
-  -@feed_urls.each do |title, url|
-    %link{:rel=>"alternate", :type=>"application/atom+xml", :title => title, :href=> url}
-
 = render "shared/analytics"
 
